tests/parser/parse-pattern.3.bad.error
error: Invalid pattern
  --> test:5:8
   |
 5 |    (let (5 x y) = g)
   |          ^ invalid constructor in pattern
