tests/parser/parse-pattern.3.bad.coalton
;; BAD: Parse Pattern
(package test-package)

(define f
  (let (5 x y) = g)
  Unit)
